welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
DwarfCode:20: error: value update is not a member of Boolean
		estSurBiscuit()=true
                ^